--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -4,3 +4,18 @@
 .firstHeading {
 	margin-top: 0;
 }
+
+#p-namespaces,
+#p-views,
+#p-actions {
+	float: left;
+	margin-right: 1em;
+}
+#p-navigation {
+	clear: both;
+}
+
+.mw-body,
+#mw-navigation {
+	padding: 1em;
+}
