--- a/resources/variables.less
+++ b/resources/variables.less
@@ -1,6 +1,6 @@
-/* @import "mediawiki.mixins"; */
+/* @import "mediawiki.mixins"; */ // Not used yet
 
-@width: 46em;
+@width: 66em;
 @border: #ccc;
 
 /* To hide objects, but keep them accessible for screen-readers */
