--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -5,26 +5,20 @@
 @import "variables.less";
 
 /* Page layout */
-
-html,
-body {
-	font-family: sans-serif;
-	margin: 0;
-	padding: 0;
-}
-
 #mw-wrapper {
 	margin: 0 auto;
 	position: relative;
-}
-
-.mw-body {
 	padding: 1em;
 }
 #p-logo {
 	text-align: center;
 	width: 10em;
+	float: right;
 
+	/*
+	 * Make logo image show up
+	 * (the class sets the background image from $wgLogo, but we still need to give it a size to show up)
+	*/
 	a.mw-wiki-logo {
 		display: block;
 		content: '';
@@ -35,49 +29,47 @@ body {
 	}
 }
 
-/* Search form and personal menu in top-right corner */
-
-#p-search {
-	position: absolute;
-	top: 1em;
-	right: 1em;
-	text-align: right;
+/* Some content stuff */
+.firstHeading {
+	margin-top: 0;
+}
+.mw-indicators {
+	float: right;
+	margin: 1.5em 0 0 1em;
 }
 
+/* Splatter the menus and tools at the bottom */
+#mw-footer,
+#page-tools,
 #p-personal {
-	position: absolute;
-	top: 3em;
-	right: 1em;
-	text-align: right;
+	margin: 1em 0;
 
 	ul {
 		list-style-type: none;
 		margin: 0;
 	}
+	li {
+		padding-right: 1em;
+		display: inline-block;
+	}
+}
+#page-tools .mw-portlet {
+	display: inline-block;
+}
+#mw-navigation {
+	margin: 1em 0;
 }
 
 /* Footer */
-
 #mw-footer {
 	clear: both;
 	border-top: 1px solid @border;
-	margin-top: 1em;
-	padding: 1em;
+	padding-top: 1em;
 }
 
-#mw-footer ul {
-	list-style-type: none;
-	margin: 0;
-}
-
-#mw-footer ul li {
-	display: inline-block;
-	margin-right: 1em;
-}
-
-#mw-navigation h2,
+/* hidden stuff */
+#page-tools h3,
 #p-search h3,
 #p-personal h3 {
 	.hidden;
 }
-
