--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -28,6 +28,9 @@
 		background-position: 50% 50%;
 	}
 }
+.mw-body {
+	position: relative;
+}
 
 /* Some content stuff */
 .firstHeading {
@@ -64,7 +67,14 @@
 #mw-footer {
 	clear: both;
 	border-top: 1px solid @border;
-	padding-top: 1em;
+
+	ul {
+		margin-top: 1em;
+	}
+}
+#footer-icons {
+	float: right;
+	margin: 0 0 1em 1em;
 }
 
 /* hidden stuff */
