Fix js and some other random changes
* Put initPage function back in Example.skin.php so js modules work, and move all the other RL stuff into there as well for consistency
* Simplify print stylesheet, add mw-indicators
* Improve comments in php and less
* Consolidate width into common styles, add some other standard styles

Change-Id: I72565634f0b260f935c1aad9a89cf49fa96bcb5a

--- a/resources/print.css
+++ b/resources/print.css
@@ -1,13 +1,9 @@
 /* Styles for print view and printing */
 
+/* Hide some extra stuff from print view (some of the navigation is already hidden automatically, but not all) */
+.mw-indicators,
 #p-logo,
 #catlinks,
-#footer-icons {
+#mw-footer {
 	display: none;
-}
-
-#mw-footer ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
 }
