--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -1,11 +1,11 @@
-/**
- * Basic styling for the Example skin.
- */
+/* Common styling for the Example skin */
 
 @import "variables.less";
 
-/* Page layout */
+// Page layout
+
 #mw-wrapper {
+	max-width: @width;
 	margin: 0 auto;
 	position: relative;
 	padding: 1em;
@@ -15,10 +15,8 @@
 	width: 10em;
 	float: right;
 
-	/*
-	 * Make logo image show up
-	 * (the class sets the background image from $wgLogo, but we still need to give it a size to show up)
-	*/
+	// Make logo image visible
+	// The class sets the background image from $wgLogo, but we still need to give it a size in order to show up
 	a.mw-wiki-logo {
 		display: block;
 		content: '';
@@ -30,18 +28,31 @@
 }
 .mw-body {
 	position: relative;
+	word-wrap: break-word;
 }
 
-/* Some content stuff */
+// Some content stuff
 .firstHeading {
 	margin-top: 0;
 }
+
 .mw-indicators {
 	float: right;
 	margin: 1.5em 0 0 1em;
 }
 
-/* Splatter the menus and tools at the bottom */
+pre {
+	overflow: auto;
+	white-space: pre-wrap;
+}
+
+.center,
+.center * {
+	margin: auto;
+	text-align: center;
+}
+
+// Splatter the menus and tools at the bottom
 #mw-footer,
 #page-tools,
 #p-personal {
@@ -63,7 +74,7 @@
 	margin: 1em 0;
 }
 
-/* Footer */
+// Footer
 #mw-footer {
 	clear: both;
 	border-top: 1px solid @border;
@@ -77,7 +88,7 @@
 	margin: 0 0 1em 1em;
 }
 
-/* hidden stuff */
+// hidden stuff
 #page-tools h3,
 #p-search h3,
 #p-personal h3 {
