--- a/resources/variables.less
+++ b/resources/variables.less
@@ -1,9 +1,9 @@
-/* @import "mediawiki.mixins"; */ // Not used yet
+// @import "mediawiki.mixins"; Not used yet
 
 @width: 66em;
 @border: #ccc;
 
-/* To hide objects, but keep them accessible for screen-readers */
+// To hide objects, but keep them accessible for screen-readers
 .hidden() {
 	position: absolute;
 	top: -9999px;
