Updates based on WoOgLeShades structure
* New getFooterBlock with better html structure
* New version of getPortlet with more flexibility
* Use generic getIfExists function as wrapper for sitenotice etc stuff
  because we really don't need twenty random getter functions for these
* Remove functions added to core in 1.29; if people absolutely need them
  they can check out an older commit and would probably have better luck
  with that anyway
* Better code style, clearer comments
* Use #footer instead of #mw-footer for consistency with #content, etc

Change-Id: Ic0344516061944a49bc53623b666b2782d0e6474

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -10,6 +10,7 @@
 	position: relative;
 	padding: 1em;
 }
+
 #p-logo {
 	text-align: center;
 	width: 10em;
@@ -26,6 +27,7 @@
 		background-position: 50% 50%;
 	}
 }
+
 .mw-body {
 	position: relative;
 	word-wrap: break-word;
@@ -53,7 +55,7 @@ pre {
 }
 
 // Splatter the menus and tools at the bottom
-#mw-footer,
+#footer,
 #page-tools,
 #p-personal {
 	margin: 1em 0;
@@ -62,20 +64,23 @@ pre {
 		list-style-type: none;
 		margin: 0;
 	}
+
 	li {
 		padding-right: 1em;
 		display: inline-block;
 	}
 }
+
 #page-tools .mw-portlet {
 	display: inline-block;
 }
+
 #mw-navigation {
 	margin: 1em 0;
 }
 
 // Footer
-#mw-footer {
+#footer {
 	clear: both;
 	border-top: 1px solid @border;
 
@@ -83,6 +88,7 @@ pre {
 		margin-top: 1em;
 	}
 }
+
 #footer-icons {
 	float: right;
 	margin: 0 0 1em 1em;
