--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -14,6 +14,7 @@
 		background-size: contain;
 	}
 }
+
 #p-banner {
 	display: none;
 }
@@ -22,10 +23,12 @@
 div.thumb {
 	float: none;
 }
+
 .thumb {
 	width: 100%;
 	margin: 1em auto;
 }
+
 div.tright {
 	margin-left: 0;
 
@@ -33,6 +36,7 @@ div.tright {
 		padding-left: 0;
 	}
 }
+
 div.tleft {
 	margin-right: 0;
 
@@ -40,12 +44,14 @@ div.tleft {
 		padding-right: 0;
 	}
 }
+
 .thumbinner {
 	width: 100% !important;
 }
+
 .thumbimage {
 	display: block;
-	margin: 0 auto .5em;
+	margin: 0 auto 0.5em;
 }
 
 // Keep images from overflowing
