--- a/resources/variables.less
+++ b/resources/variables.less
@@ -1,4 +1,5 @@
-// @import "mediawiki.mixins"; Not used yet
+// Uncomment to use MediaWiki-supplied mixins
+// @import "mediawiki.mixins";
 
 @width: 66em;
 @border: #ccc;
