--- a/resources/screen-desktop.less
+++ b/resources/screen-desktop.less
@@ -1,6 +1,6 @@
 /* Styles appear on displays over 750 pixels wide */
 
-@import "variables.less";
+@import 'variables.less';
 
 #site-navigation {
 	ul {
