Add `.mw-footer` CSS class & replace `#footer` selector with it
`#footer` kept for backwards compatibility with user styles and gadgets.

Bug: T248137
Change-Id: I85586d1b7e1c05194689f5e26a9b8fb3cebe6d1e

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -55,7 +55,7 @@ pre {
 }
 
 // Splatter the menus and tools at the bottom
-#footer,
+.mw-footer,
 #page-tools,
 #p-personal {
 	margin: 1em 0;
@@ -80,10 +80,11 @@ pre {
 }
 
 // Footer
-#footer {
+.mw-footer {
 	clear: both;
 	border-top: 1px solid @border;
 
+	// stylelint-disable-next-line no-descending-specificity
 	ul {
 		margin-top: 1em;
 	}
