--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -1,3 +1,43 @@
 <div id="mw-wrapper">
-{{{html-example-skin}}}
+	<div class="mw-body" id="content" role="main">
+		<div id="siteNotice">{{{html-site-notice}}}</div>
+		{{{html-newtalk}}}
+		<div class="mw-indicators mw-body-content">
+		{{#array-indicators}}
+		<div id="{{id}}" class="{{class}}">{{{html}}}</div>
+		{{/array-indicators}}
+		</div>
+		<h1 class="firstHeading" {{{html-user-language-attributes}}}>{{{html-title}}}</h1>
+		<div id="siteSub">{{msg-tagline}}</div>
+		<div class="mw-body-content">
+			<div id="contentSub">
+				{{{html-subtitle}}}
+				{{{html-undelete-link}}}
+			</div>
+			{{{html-body-content}}}
+			<!-- todo: replace with .mixin-clearfix -->
+			<div class="visualClear"></div>
+			{{{html-categories}}}
+		</div>
+		{{{html-after-content}}}
+	</div>
+	<div id="mw-navigation">
+		<h2>{{msg-navigation-heading}}</h2>
+		{{{html-example-logo}}}
+		{{#data-search-box}}
+		<form action="{{form-action}}" role="search" class="mw-portlet" id="p-search">
+			<input type="hidden" name="title" value="{{page-title}}">
+			<h3>
+				<label for="searchInput">{{msg-search}}</label>
+			</h3>
+			{{{html-input}}}
+			{{{html-button-search}}}
+		</form>
+		{{/data-search-box}}
+		{{{html-example-navlinks}}}
+		<div id="site-navigation">
+		{{{html-example-sitenav}}}
+		</div>
+	</div>
+	{{{html-example-footer}}}
 </div>
