--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -23,7 +23,9 @@
 	</div>
 	<div id="mw-navigation">
 		<h2>{{msg-navigation-heading}}</h2>
-		{{{html-example-logo}}}
+		<div id="p-logo" class="mw-portlet" role="banner">
+			{{{html-example-logo}}}
+		</div>
 		{{#data-search-box}}
 		<form action="{{form-action}}" role="search" class="mw-portlet" id="p-search">
 			<input type="hidden" name="title" value="{{page-title}}">
@@ -34,10 +36,19 @@
 			{{{html-button-search}}}
 		</form>
 		{{/data-search-box}}
-		{{{html-example-navlinks}}}
+		<div id="user-tools">
+			{{{html-example-user-tools}}}
+		</div>
+		<div id="page-tools">
+			{{{html-example-page-links}}}
+		</div>
 		<div id="site-navigation">
 		{{{html-example-sitenav}}}
 		</div>
 	</div>
-	{{{html-example-footer}}}
+	<div id="footer" class="mw-footer" role="contentinfo" {{{html-user-language-attributes}}}>
+		{{{html-example-footer}}}
+		<!-- todo: replace with .mixin-clearfix -->
+		<div class="visualClear"></div>
+	</div>
 </div>
