Use SkinMustache for footer generation
* Drop non-standard footer-icon class. Can be added by a
skin developer if required but img tag and #footer-icons classes
are recommended for skin developers wanting to style

Bug: T235008
Depends-On: Ib2af1f72c0508870b20321dffc8af2158d0dbd55
Change-Id: Iab8c35f58c395883952602f08f7f71d002320c7e

--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -61,6 +61,13 @@
 	</div>
 	<div id="footer" class="mw-footer" role="contentinfo" {{{html-user-language-attributes}}}>
 		{{{html-example-footer}}}
+		{{#data-footer}}
+		{{!}}{{#data-icons}}{{>FooterList}}{{/data-icons}}
+		{{!}}<div id="footer-list">
+		{{!}}{{#data-info}}{{>FooterList}}{{/data-info}}
+		{{!}}{{#data-places}}{{>FooterList}}{{/data-places}}
+		{{!}}</div>
+		{{/data-footer}}
 		<!-- todo: replace with .mixin-clearfix -->
 		<div class="visualClear"></div>
 	</div>
