Source new messages from the correct place
Depends-On: I85df52fd10ef44087cf007befaa87c54d1ecaf83
Change-Id: I2ddd49db739e6ae3bc43559ac258e7b981a4ac4c

--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -1,7 +1,7 @@
 <div id="mw-wrapper">
 	<div class="mw-body" id="content" role="main">
 		<div id="siteNotice">{{{html-site-notice}}}</div>
-		{{{html-newtalk}}}
+		{{{html-user-message}}}
 		<div class="mw-indicators mw-body-content">
 		{{#array-indicators}}
 		<div id="{{id}}" class="{{class}}">{{{html}}}</div>
