Example should display languages
Reference to languages is incorrect

Change-Id: I52dd069e0a682273c65a4b6bffb688cb385a0535

--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -56,7 +56,7 @@
 		<div id="site-navigation">
 			{{#data-portlets-sidebar.data-portlets-first}}{{>Portlet}}{{/data-portlets-sidebar.data-portlets-first}}
 			{{#data-portlets-sidebar.array-portlets-rest}}{{>Portlet}}{{/data-portlets-sidebar.array-portlets-rest}}
-			{{#data-portlets.lang}}{{>Portlet}}{{/data-portlets.lang}}
+			{{#data-portlets.data-languages}}{{>Portlet}}{{/data-portlets.data-languages}}
 		</div>
 	</div>
 	<div id="footer" class="mw-footer" role="contentinfo" {{{html-user-language-attributes}}}>
