Use main page link provided by SkinMustache
Bug: T262729
Depends-On: I98fc4755e6a736efc2210f8b6ddf4a1cc4eea378
Change-Id: Id9da3ae9ed605aaf121576cd019438b0afc33887

--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -24,7 +24,7 @@
 	<div id="mw-navigation">
 		<h2>{{msg-navigation-heading}}</h2>
 		<div id="p-logo" class="mw-portlet" role="banner">
-			<a href="{{example-main-page-url}}">
+			<a href="{{link-mainpage}}">
 			{{#data-logos}}
 				{{#icon}}<img src="{{.}}" width="40" height="40">{{/icon}}
 				{{#wordmark}}<img src="{{src}}" width="{{width}}" height="{{height}}">{{/wordmark}}
