Update with best practices for 1.38
1) Use html-title-heading to render headings

This is recommended going forward as it allows editors to control
the heading on certain pages.

2) Use data-portlets for category generation

3) Specific `toc` property

4) Remove Grunt

5) Use less import statements instead of skin.json rules

6) Use mixin-screen-reader-text for screen reader text

7) Use consistent indenting

8) Use skin.js and skin.less as entry points.

Change-Id: Ia770667832a853f8642432c0179fc644dd940f55

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -1,6 +1,7 @@
 /* Common styling for the Example skin */
 
 @import 'variables.less';
+@import 'mediawiki.mixins.less';
 
 // Page layout
 
@@ -77,6 +78,10 @@ pre {
 
 #mw-navigation {
 	margin: 1em 0;
+
+	h2 {
+		.mixin-screen-reader-text;
+	}
 }
 
 // Footer
@@ -98,5 +103,5 @@ pre {
 #page-tools h3,
 #p-search h3,
 #p-personal h3 {
-	.hidden;
+	.mixin-screen-reader-text;
 }
