Do not use legacy personal menu
The personal menu was split up into 4 separate menus
which should be used instead

Change-Id: I3a9e9611de28c234803ed93af1b3fac434d93b33

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -105,3 +105,21 @@ pre {
 #p-personal h3 {
 	.mixin-screen-reader-text;
 }
+
+// user tools
+#user-tools {
+	margin-top: 10px;
+}
+
+#p-user-interface-preferences,
+#p-notifications,
+#p-user-page {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+#p-user-page a:before {
+	content: '👤';
+	display: inline-block;
+	padding-right: 10px;
+}
