stylelint: Enable selector-pseudo-element-colon-notation
Via stylelint --fix

Change-Id: If4d5adfc1fe8e8a721d010dfd8dfb7a12dbc50b2

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -118,7 +118,7 @@ pre {
 	vertical-align: middle;
 }
 
-#p-user-page a:before {
+#p-user-page a::before {
 	content: '👤';
 	display: inline-block;
 	padding-right: 10px;
