--- a/templates/CategoryPortlet.mustache
+++ b/templates/CategoryPortlet.mustache
@@ -1,7 +1,8 @@
+{{#is-article}}
 <div id="catlinks" class="catlinks" data-mw="interface">
 	{{#data-category-normal}}
 	<div id="{{id}}" class="{{class}}">
-		<ul>{{{html-items}}}</ul>
+		<ul>{{#array-items}}{{>ListItem}}{{/array-items}}</ul>
 		{{{html-after-portal}}}
 	</div>
 	{{/data-category-normal}}
@@ -10,8 +11,9 @@
 	{{/data-category-normal}}
 	{{#data-category-hidden}}
 	<div id="{{id}}" class="{{class}}">
-		<ul>{{{html-items}}}</ul>
+		<ul>{{#array-items}}{{>ListItem}}{{/array-items}}</ul>
 		{{{html-after-portal}}}
 	</div>
 	{{/data-category-hidden}}
 </div>
+{{/is-article}}
