--- a/resources/Portlet.less
+++ b/resources/Portlet.less
@@ -1,5 +1,5 @@
-@import 'mediawiki.skin.variables';
-@import 'variables.less';
+// Import MediaWiki skin variables for general fundamental styling.
+@import 'mediawiki.skin.variables.less';
 
 .mw-portlet {
 	position: relative;
@@ -24,7 +24,7 @@
 		cursor: pointer;
 		top: 0;
 		left: 0;
-		z-index: 1;
+		z-index: @z-index-stacking-1;
 		width: 100%;
 		height: 100%;
 		margin: 0;
