styles, docs: Improve documentation around stylesheet imports
Also remove unnecessary variables import references.
Alternatively, we could consider putting them into every file, making
it simpler for devs to orient.

Change-Id: I60e1a54dd84b98c1c943c68f9ef94391bbbc9cc3

--- a/resources/skin.less
+++ b/resources/skin.less
@@ -1,4 +1,11 @@
+// Reference all skin stylesheets and variables aside of extension specific.
+// Note, that 'screen-*' and 'print.css' stylesheets are imported in 'common.less'.
+
+// Import MediaWiki skin variables for general fundamental styling.
 @import 'mediawiki.skin.variables.less';
+// Import skin specific variables beyond MediaWiki skin variables scope.
 @import 'variables.less';
-@import 'Portlet.less';
+// Import common skin style rules.
 @import 'common.less';
+// Import specific module style rules.
+@import 'Portlet.less';
