--- a/resources/print.css
+++ b/resources/print.css
@@ -1,6 +1,8 @@
-/* Styles for print view and printing */
+/* Styles for print view and printing. */
+/* You can use CSS files or Less files depending on your preference. */
 
-/* Hide some extra stuff from print view (some of the navigation is already hidden automatically, but not all) */
+/* Hide some extra stuff from print view (some of the navigation is already hidden automatically,
+   but not all). */
 .mw-indicators,
 #p-logo,
 #catlinks,
