build: Upgrade stylelint-config-wikimedia from 0.17.2 to 0.18.0
LibUp is having issues, so let's just do it for it.

Change-Id: I924ec762c7b02d67f9aaf8a9dde12ebafc03475e

--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -28,7 +28,8 @@ div.thumb {
 }
 
 .thumbinner {
-	width: 100% !important; // stylelint-disable-line declaration-no-important
+	/* stylelint-disable-next-line declaration-no-important */
+	width: 100% !important;
 }
 
 div.tright {
@@ -54,8 +55,10 @@ div.tleft {
 
 // Keep images from overflowing
 .mw-body-content a > img {
-	height: auto !important; // stylelint-disable-line declaration-no-important
-	max-width: 100% !important; // stylelint-disable-line declaration-no-important
+	/* stylelint-disable-next-line declaration-no-important */
+	height: auto !important;
+	/* stylelint-disable-next-line declaration-no-important */
+	max-width: 100% !important;
 }
 
 .nomobile {
